--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1539,6 +1539,24 @@ hr.hrStyle {
   background-color: rgba(85, 85, 85, 0.7);
   color: #fff; }
 
+article.about {
+  display: block;
+  width: 100%;
+  max-width: 800px;
+  height: auto;
+  background-color: #fff;
+  padding: 10px 20px 5px 20px;
+  margin: 0 auto; }
+  article.about h2 {
+    font-size: 1.6em; }
+    article.about h2 span {
+      display: block;
+      font-size: 0.6em;
+      font-weight: 300; }
+  article.about p {
+    font-size: 1.0em;
+    line-height: 1.5; }
+
 form#contact {
   display: block;
   width: 100%;
