--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1684,6 +1684,61 @@ form#contact {
     form#contact input[type=submit]:hover {
       background-color: rgba(0, 0, 0, 0.3); }
 
+form.photoGallery {
+  display: block;
+  width: 80%;
+  height: auto;
+  background-color: #f2f2f2;
+  padding: 0.938em 1.250em;
+  margin: 10px auto; }
+  form.photoGallery fieldset {
+    border: 0.125em solid #4C9CF1;
+    padding: 0.938em;
+    margin-bottom: 0.625em; }
+  form.photoGallery legend {
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-size: 1.2em;
+    color: #4C9CF1;
+    padding: 0 0.313em; }
+  form.photoGallery .uploadImage {
+    outline: none;
+    border: none;
+    clear: both;
+    display: block;
+    width: 100%;
+    background-color: #193a60;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.0em;
+    color: #fff;
+    padding: 0; }
+  form.photoGallery .uploadImage::-webkit-file-upload-button {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    color: white;
+    border: none;
+    background-color: red;
+    width: 7.500em;
+    height: 1.875em; }
+  form.photoGallery .uploadBtn {
+    cursor: pointer;
+    clear: both;
+    border: none;
+    outline: none;
+    float: right;
+    display: block;
+    width: 6.500em;
+    height: 2.500em;
+    background-color: #4C8FEC;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.0em;
+    text-align: center;
+    text-transform: capitalize;
+    color: #fff;
+    margin-top: 0.625em;
+    margin-right: 0em; }
+    form.photoGallery .uploadBtn:hover {
+      background-color: #2e6bb1; }
+
 .masthead {
   background: #fff url(../images/img-hummingbird-header-001.png) no-repeat right bottom; }
 
