--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1719,6 +1719,40 @@ form.photoGallery {
     background-color: red;
     width: 7.500em;
     height: 1.875em; }
+  form.photoGallery .category {
+    display: block;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.0em;
+    font-weight: 700;
+    text-transform: capitalize;
+    color: #444;
+    line-height: 1.3;
+    padding: .6em 1.4em .5em .8em;
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
+    margin: 0.625em 0;
+    border: 1px solid #aaa;
+    box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+    border-radius: .5em;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: #fff;
+    background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"), linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
+    background-repeat: no-repeat, repeat;
+    background-position: right .7em top 50%, 0 0;
+    background-size: .65em auto, 100%; }
+    form.photoGallery .category::-ms-expand {
+      display: none; }
+    form.photoGallery .category::hover {
+      border-color: #888; }
+    form.photoGallery .category::focus {
+      border-color: #aaa;
+      box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
+      box-shadow: 0 0 0 3px -moz-mac-focusring;
+      color: #222;
+      outline: none; }
   form.photoGallery .uploadBtn {
     cursor: pointer;
     clear: both;
@@ -1738,6 +1772,62 @@ form.photoGallery {
     margin-right: 0em; }
     form.photoGallery .uploadBtn:hover {
       background-color: #2e6bb1; }
+
+/*
+essential styles:
+these make the slideshow work
+*/
+#slides {
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  height: 400px;
+  padding: 0px;
+  margin: 0px;
+  list-style-type: none; }
+
+.slide {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  z-index: 1;
+  -webkit-transition: opacity 1s;
+  -moz-transition: opacity 1s;
+  -o-transition: opacity 1s;
+  transition: opacity 1s; }
+
+.showing {
+  opacity: 1;
+  z-index: 2; }
+
+/*
+non-essential styles:
+just for appearance; change whatever you want
+*/
+.slide {
+  font-size: 40px;
+  padding: 40px;
+  box-sizing: border-box;
+  background: #333;
+  color: #fff; }
+
+.slide:nth-of-type(1) {
+  background: red; }
+
+.slide:nth-of-type(2) {
+  background: orange; }
+
+.slide:nth-of-type(3) {
+  background: green; }
+
+.slide:nth-of-type(4) {
+  background: blue; }
+
+.slide:nth-of-type(5) {
+  background: purple; }
 
 .masthead {
   background: #fff url(../images/img-hummingbird-header-001.png) no-repeat right bottom; }
