--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1773,40 +1773,24 @@ form.photoGallery {
     form.photoGallery .uploadBtn:hover {
       background-color: #2e6bb1; }
 
-/*
-essential styles:
-these make the slideshow work
-*/
-#slides {
-  position: relative;
+div.frame {
+  display: block;
   width: 100%;
-  max-width: 600px;
-  height: 400px;
-  padding: 0px;
-  margin: 0px;
-  list-style-type: none; }
+  height: auto;
+  padding: 5px 20px; }
+  div.frame img.box {
+    float: left;
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+    border: 2px solid #000;
+    padding: 5px;
+    margin: 10px;
+    transition: background-color .5s; }
+    div.frame img.box:hover {
+      background-color: #000; }
 
-.slide {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  z-index: 1;
-  -webkit-transition: opacity 1s;
-  -moz-transition: opacity 1s;
-  -o-transition: opacity 1s;
-  transition: opacity 1s; }
-
-.showing {
-  opacity: 1;
-  z-index: 2; }
-
-/*
-non-essential styles:
-just for appearance; change whatever you want
-*/
+/*@import "partials/_slideshow.scss";*/
 .masthead {
   background: #fff url(../images/img-hummingbird-header-001.png) no-repeat right bottom; }
 
