--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1535,6 +1535,46 @@ hr.hrStyle {
   background-color: rgba(85, 85, 85, 0.7);
   color: #fff; }
 
+div#remote {
+  position: relative;
+  display: block;
+  width: 100%;
+  max-width: 800px;
+  height: 50px;
+  background-color: rgba(85, 85, 85, 0.5);
+  padding: 10px;
+  margin: 0 auto; }
+  div#remote::after {
+    content: '';
+    display: block;
+    clear: both; }
+  div#remote a.btn {
+    cursor: pointer;
+    font-size: 1.2em;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 4px 15px;
+    transition: background-color .5s; }
+  div#remote a.btn:hover {
+    background-color: rgba(0, 0, 0, 0.3); }
+  div#remote h2 {
+    margin: 0 0 .5em 0;
+    font-size: 1.6em;
+    font-weight: 700;
+    line-height: 1.1em; }
+  div#remote #ePrev {
+    position: absolute;
+    top: 5px;
+    left: 10px; }
+  div#remote #status {
+    color: #fff;
+    text-align: center; }
+  div#remote #eNext {
+    position: absolute;
+    top: 5px;
+    right: 10px; }
+
 form#addTriviaQA, form#editTrivia {
   display: block;
   width: 100%;
