--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1536,6 +1536,26 @@ hr.hrStyle {
   background-color: rgba(85, 85, 85, 0.7);
   color: #fff; }
 
+a.qBtn {
+  float: right;
+  font-size: 1.0em;
+  text-decoration: none;
+  text-transform: capitalize;
+  color: #555;
+  border: 1px solid #555;
+  padding: 2px 7px;
+  margin-right: 5.000em;
+  margin-bottom: 3.125em;
+  transition: background-color .5s; }
+  a.qBtn:visited, a.qBtn:active {
+    background-color: #555; }
+  a.qBtn:hover {
+    color: #555;
+    background-color: rgba(0, 0, 0, 0.3); }
+
+.disableClick {
+  pointer-events: "none"; }
+
 div#remote {
   position: relative;
   display: block;
