--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -436,6 +436,18 @@ div.site-branding {
   background: #e6e6e6;
   overflow: hidden; }
 
+.displayStatus {
+  display: block;
+  width: 100%;
+  max-width: 300px;
+  height: 40px;
+  background-color: #fff;
+  text-align: center;
+  line-height: 40px;
+  margin: 0 auto; }
+  .displayStatus .displayStatus {
+    line-height: 30px; }
+
 .social-media {
   padding-bottom: 1em; }
   .social-media ul {
@@ -1432,7 +1444,7 @@ form#gameCat {
 
 #mainGame #headerStyle {
   padding: 5px 50px;
-  margin: 0px; }
+  margin: 90px 0 0 0; }
 
 #mainGame #headerStyle h2 {
   font-family: Arial, Helvetica, sans-serif;
@@ -1747,6 +1759,12 @@ form#addTriviaQA, form#editTrivia {
 .styled-table tbody tr.active-row {
   font-weight: bold;
   color: #00b28d; }
+
+#totals h2 {
+  color: #fff; }
+#totals p {
+  color: #fff;
+  line-height: 0.6; }
 
 article.about {
   display: block;
