--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -577,6 +577,30 @@ div.site-branding {
   background: rgba(0, 0, 0, 0.08);
   border-radius: 4px; }
 
+.hstableUsername {
+  display: block;
+  width: 100%;
+  height: 7.25em;
+  background-color: #000;
+  padding: 20px;
+  margin: 10px auto; }
+  .hstableUsername input[type=text] {
+    width: 100%;
+    height: 2.125em;
+    color: #404040;
+    padding: 0 0.625em;
+    margin: 0.313em 0; }
+    .hstableUsername input[type=text]:focus {
+      border-color: #7dc9e2;
+      outline-color: #dceefc;
+      outline-offset: 0; }
+  .hstableUsername input[type=submit] {
+    width: 50%;
+    background-color: #fff;
+    text-transform: capitalize;
+    padding: 2px;
+    margin: 0 auto; }
+
 .footer-area {
   padding: .4em 1em;
   text-align: center;
@@ -1168,7 +1192,6 @@ a.btn1 {
   color: #555;
   border: 1px solid #555;
   padding: 2px 7px;
-  margin-right: 5.000em;
   margin-bottom: 3.125em;
   transition: background-color .5s; }
   a.btn1:visited, a.btn1:active {
@@ -1252,6 +1275,8 @@ section.main {
       color: #fff;
       font-size: 1.2em;
       line-height: 1.5; }
+  section.main section #customBtn:hover {
+    top: -154px; }
   section.main .banner {
     position: absolute;
     top: 0px;
@@ -1330,12 +1355,12 @@ section.main {
 #startBtn {
   z-index: 1;
   position: relative;
+  top: 37.50em;
+  left: 18.75em;
   display: block;
   width: 205px;
   height: 154px;
-  overflow: hidden;
-  top: 60px;
-  left: 120px; }
+  overflow: hidden; }
 
 #customBtn {
   position: absolute;
@@ -1345,6 +1370,8 @@ section.main {
   height: 308px;
   z-index: 1;
   background: url(../images/img-new-button-001.png) no-repeat 0 0; }
+  #customBtn span {
+    display: none; }
 
 section #customBtn:hover {
   top: -154px; }
