--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1845,6 +1845,7 @@ section.main {
   /* 800px ~ 50em */
   height: auto;
   /* 1200px ~ 75em */
+  background: url(../images/img-smartphone-001.jpg) no-repeat center bottom;
   padding: 2px; }
   section.main .displayStatus {
     display: none;
@@ -1857,12 +1858,12 @@ section.main {
     line-height: 40px; }
     section.main .displayStatus .displayMessage {
       font-size: 1.4em;
-      color: #4444CD;
+      color: #fff;
       text-align: left;
       padding: 5px 0; }
     section.main .displayStatus p {
       text-align: left;
-      color: #4444CD;
+      color: #fff;
       font-size: 1.2em;
       line-height: 1.5; }
 
@@ -1909,7 +1910,7 @@ section.main {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.0rem;
   line-height: 1.2;
-  color: #4444CD; }
+  color: #fff; }
   #mainGame #headerStyle h2 #clock {
     font-size: 1.2em; }
   #mainGame #headerStyle h2 #currentQuestion {
@@ -1935,7 +1936,7 @@ hr.hrStyle {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.0em;
   line-height: 1.5;
-  color: #4444CD;
+  color: #fff;
   vertical-align: middle; }
 
 #mainGame #triviaSection #buttonContainer {
@@ -1952,7 +1953,7 @@ hr.hrStyle {
   background-color: transparent;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.0em;
-  color: #4444CD;
+  color: #fff;
   text-transform: capitalize;
   text-align: left;
   padding-left: 10px;
@@ -1970,7 +1971,7 @@ hr.hrStyle {
   left: 5px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.0em;
-  color: #4444CD;
+  color: #fff;
   line-height: 15px; }
 
 #mainGame #playerStats #percent {
@@ -1979,7 +1980,7 @@ hr.hrStyle {
   right: 50px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.0em;
-  color: #4444CD;
+  color: #fff;
   line-height: 15px; }
 
 #mainGame #nextStyle {
