--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1810,6 +1810,9 @@ div.frame {
   background: rgba(0, 0, 0, 0.08);
   border-radius: 4px; }
 
+.popup {
+  display: none; }
+
 /* Trivia Game CSS */
 #quiz {
   display: none; }
